Add synchronization to PreferredListGen
Replace use of URLClassLoader with RFC3986URLClassLoader in tools.

Add more error handling in test code.


git-svn-id: https://svn.apache.org/repos/asf/river/jtsk/skunk/qa_refactor/trunk@1587556 13f79535-47bb-0310-9956-ffa450edef68